# bazel-qt-example

./: .bazelrc
labs/basics/: README.md
labs/basics/task_1/: BUILD  CMakeLists.txt  Ticket.h  main.cpp  main_window.cpp  main_window.h
labs/basics/task_2/: BUILD  CMakeLists.txt  DateSchedule.cpp  DateSchedule.h  Event.cpp  Event.h  Schedule.cpp  Schedule.h  Utils.cpp  Utils.h  main.cpp  main_window.cpp  main_window.h  resources.qrc
labs/graphics/: BUILD  CMakeLists.txt  Controller.cpp  Controller.h  PaintWidget.cpp  PaintWidget.h  Polygon.cpp  Polygon.h  Ray.cpp  Ray.h  main.cpp
